--- a/notebooks/testing_pdf_to_text.Rmd
+++ b/notebooks/testing_pdf_to_text.Rmd
@@ -12,7 +12,7 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 # Purpose
-The purpose of this notebook is to test using the Tika module via Python, instead of R. The Python package allows for use for Apache Tika REST API, Use of Python would mean we would not need to locally install the Tika jar.
+The purpose of this notebook is to test using different methods for converting raw PDF to text
 
 # Import
 ## Libraries
@@ -46,25 +46,18 @@ for (file in file_paths){
 ## Python Modules
 ```{r}
 parser <- import("tika.parser")
+
+# PDF Miner
 ```
 
 ## Data
 ```{r import_data}
 # PDF Input
 ## Define Path
-pdf_path <- "./../data/acadmic_papers_pdf_sample/a94amj.pdf"
-
-
-# Patterns File
-patterns_col <- c("remove","comments")
-patterns_raw <- read_excel(path = "./../data/patterns.xlsx", col_names = patterns_col, )
-patterns <- patterns_raw %>% pull(remove)
+pdf_path <- "./../data/acadmic_papers_pdf_sample/jv04amj.pdf"
 ```
 
-
-
-# Test Tika
-## R
+# R - RTika
 The follow processes the sample PDF using Tika via the R package.
 ```{r}
 pdf_txt_raw_r <- tika_text(pdf_path)
@@ -72,7 +65,7 @@ pdf_txt_raw_r <- tika_text(pdf_path)
 pdf_txt_raw_r %>% substr(1,100)
 ```
 
-## Python
+# Python - Tika
 ```{r}
 pdf_tika_py <- parser$from_file(pdf_path)
 
@@ -81,3 +74,4 @@ pdf_txt_raw_py <- pdf_tika_py$content
 pdf_txt_raw_py %>% substr(1,100)
 ```
 
+# Python - PDF Miner
