--- a/notebooks/setup_reticulate.Rmd
+++ b/notebooks/setup_reticulate.Rmd
@@ -23,18 +23,18 @@ python_path = Sys.getenv('PYTHON_PATH')
 virtualenv_list <-  reticulate::virtualenv_list()
 
 PYTHON_DEPENDENCIES = c("numpy", "joblib", "scikit-learn", "tensorflow",
-                        "tika")
+                        "tika", "pdfminer")
 
 # Create New Virtual Environment if Needed
-# if (!(virtualenv_dir %in% virtualenv_list)){
-#   reticulate::virtualenv_create(envname = virtualenv_dir, 
-                                  # python = python_path)
-# }
+if (!(virtualenv_dir %in% virtualenv_list)){
+  reticulate::virtualenv_create(envname = virtualenv_dir,
+python = python_path)
+}
 
-# reticulate::virtualenv_install(virtualenv_dir, packages = PYTHON_DEPENDENCIES, 
-#                                ignore_installed=TRUE)
-# 
-# reticulate::use_virtualenv(virtualenv_dir, required = TRUE)
+reticulate::virtualenv_install(virtualenv_dir, packages = PYTHON_DEPENDENCIES,
+                               ignore_installed=TRUE)
+
+reticulate::use_virtualenv(virtualenv_dir, required = TRUE)
 ```
 
 ```{r}
