--- a/notebooks/testing_causality_classification.Rmd
+++ b/notebooks/testing_causality_classification.Rmd
@@ -19,10 +19,8 @@ The purpose of this notebook is to test how to implement the Entity Extraction m
 ```{r import_libraries, message=FALSE}
   if (!require(pacman)) {install.packages('pacman')}
   p_load(
-    data.table,
     dplyr,
-    readxl,
-    reticulate,
+    purrr,
     stringr,
     tidyr
   )
@@ -41,19 +39,67 @@ for (file in file_paths){
   source(file)
 }
 ```
+
 ## Data
 ```{r import_data}
 # PDF Input
 ## Define Path
 pdf_path <- "./../data/acadmic_papers_pdf_sample/jv04amj.pdf"
-
-pdf_txt_raw <- pdf_to_text(pdf_path)
 ```
 
 ## Python Modules
-In order to use the Entity Extraction model in R, we need to import the Tensorflow Python package via the Reticulate Package. In addition, to ensure the training/test split is equivalent, we will also use the Sci-kit Learn Module.
 
-# Process Data
+
+# Pre-process Steps
+Before Causality Classification occurs, the following steps happen:
+
+* Text Pre-processing
+* Hypothesis Classification
+* Entity Extraction
+
+
+```{r}
+# Text Pre-processing
+text_raw <- pdf_to_text(pdf_path)
+text_processed <- process_text(input_text = text_raw)
+
+# Hypothesis Classification
+hypothesis <- extract_hypothesis(text_processed)
+hypothesis_vec <- hypothesis %>% pull(hypothesis)
+hypothesis
+
+# Entity Extraction
+entities <- entity_extraction_mult(hypothesis_vec)
+entities
+```
+
+# Replace Entity With Node
+```{r}
+
+pattern_punct <- "[[:punct:]]"
+
+causality <- hypothesis %>% 
+  bind_cols(entities) %>% 
+  mutate(
+    row_id= row_number()
+  ) %>% 
+  select(row_id, everything()) %>% 
+  drop_na()%>% 
+  modify_if(is.factor, as.character) %>% 
+  mutate(
+    hypothesis = str_remove_all(hypothesis, pattern_punct),
+    cause = str_remove_all(cause, pattern_punct),
+    effect = str_remove_all(effect, pattern_punct)
+  ) %>% 
+  mutate(
+    causal_statement = str_replace(hypothesis, cause, "node_1"),
+    causal_statement = str_replace(causal_statement, effect, "node_2")
+  )
+
+causality
+```
+
+
 ## Process Text and Extract Hypotheses
 First, we process our raw input and extract hypotheses.
 ```{r process_extract_hypothesis}
@@ -69,7 +115,7 @@ hypo_xtr_vec <- extract_hypothesis(text_processed) %>%
 # Hypothesis Selection
 For the following process, one hypothesis will be selected as a indicative sample. We will use this hypothesis to work through the process of turning a hypothesis into two extracted entities. Once the process is solidified, we can apply it across all available hypothesis.
 ```{r select_exmample_hypothesis}
-n = 9
+n = 1
 hypothesis <- hypo_xtr_vec[n]
 hypothesis
 ```
@@ -87,7 +133,6 @@ pred_classes
 With our example hypothesis selected, our first step is to generate a list of indexes fo where Node 1 and Node 2 were predicted.
 ```{r}
 index_entities <- gen_entity_class_index(pred_classes)
-index_entities
 ```
 With the indexes of each Node identified, some processing has to occur. Generally, the Node 1 and Node 2 indexes are grouped with the sample class, and distinct from each other. A sample seletion of the Entity Extraction model output might look like the following:
 
@@ -111,17 +156,11 @@ For overlapping entities we define a function. When there is overlap, the functi
 With the function defined, we can execute on the sample hypothesis.
 ```{r}
 print("Nodes Indexes - Pre")
-index_entities
+print(index_entities)
 
 # Verify Both Entities Detected
-
-if (
-  !(vector_is_empty(index_entities[[1]])) & 
-  !(vector_is_empty(index_entities[[2]]))
-) {
-  both_entity_present = TRUE
-}
-
+both_entity_present <- vector_is_empty(index_entities[[1]]) & 
+  vector_is_empty(index_entities[[2]])
 
 # Trim Overlap
 if (both_entity_present) {
@@ -133,111 +172,6 @@ print("Nodes Indexes - Post")
 print(index_entities)
 ```
 
-
-```{r}
-entity_index_input <- index_entities
-
-  entity_idx_1 <- entity_index_input[[1]]
-  entity_idx_2 <- entity_index_input[[2]]
-  
-  entity_range_1 <- min(entity_idx_1):max(entity_idx_1)
-  entity_range_1
-  entity_range_2 <- min(entity_idx_2):max(entity_idx_2)
-  entity_range_2
-  
-  range_overlap <- intersect(entity_range_1,entity_range_2 )
-  range_overlap
-  
-  span_entity_1 = length(entity_range_1)
-  span_entity_1
-  span_entity_2 = length(entity_range_2)
-  span_entity_2
-
-  med_entity_1_idx <- median(entity_idx_1)
-  med_entity_1_idx
-  
-  med_entity_2_idx <- median(entity_idx_2)
-  med_entity_2_idx
-  
-  entity_1_dim <- length(entity_idx_1)
-  entity_1_dim
-  entity_idx_1 <- entity_idx_1[-entity_1_dim]
-  entity_idx_1
-  
-    entity_index_trim <- vector(mode = "list", length = 2)
-    entity_index_trim[[1]] = entity_idx_1
-    entity_index_trim[[2]] = entity_idx_2
-    
-    entity_index_trim
-```
-
-
-```{r}
-trim_overlapping_entities <- function(entity_index_input){
-  # Extract Node 1 and node 2 Index
-  entity_idx_1 <- entity_index_input[[1]]
-  entity_idx_2 <- entity_index_input[[2]]
-  
-  # Define Node Index Range
-  entity_range_1 <- min(entity_idx_1):max(entity_idx_1)
-  entity_range_2 <- min(entity_idx_2):max(entity_idx_2)
-  
-  # Determine if Ranges Overlap
-  range_overlap <- intersect(entity_range_1,entity_range_2 )
-  
-  if (length(range_overlap) == 0) {
-    
-    return(entity_index_input)
-    
-    # If Overlap Exists, Trim Longest Node Range
-  } else {
-    # Define Node Range Length
-    span_entity_1 <- length(entity_range_1)
-    span_entity_2 <- length(entity_range_2)
-    
-    # Determine Median of Node Indexes 
-    # to Determine Which Direction to Move
-    med_entity_1_idx <- median(entity_idx_1)
-    med_entity_2_idx <- median(entity_idx_2)
-    
-    # First Node in Hypothesis - Node 1
-    if (med_entity_1_idx < med_entity_2_idx) {
-      if (span_entity_2 >= span_entity_1){
-        entity_idx_2 <- entity_idx_2[-1]
-        
-      } else {
-        entity_1_dim <- length(entity_idx_1)
-        entity_idx_1 <- entity_idx_1[-entity_1_dim]
-      }
-      # First Node in Hypothesis - Node 2
-    } else {
-      if (span_entity_2 >= span_entity_1){
-        entity_2_dim <- length(entity_idx_2)
-        entity_idx_2 <- entity_idx_2[-entity_2_dim]
-        
-      } else {
-        entity_idx_1 <- entity_idx_1[-1]
-      }
-    }
-    # Store Trimmed Indexes For Output
-    entity_index_trim <- vector(mode = "list", length = 2)
-    entity_index_trim[[1]] = entity_idx_1
-    entity_index_trim[[2]] = entity_idx_2
-    
-    # Recursively Execute Function
-    return(trim_overlapping_entities(entity_index_trim))
-  }
-}
-
-trim_overlapping_entities(index_entities)
-```
-
-
-```{r}
-trim_overlapping_entities(index_entities)
-```
-
-
 ## Outliers
 For outlier predicted classes, we use the standard Box Plot outlier definition, *1.5 x Interquartile Range*. We define a function which identifies outlier indexes and the trims them.
 
@@ -248,48 +182,12 @@ index_entities <- trim_outlier_indexes(index_entities)
 print("Nodes Indexes - Post")
 print(index_entities)
 ```
-
-```{r}
-entity_index_output <- vector(mode = "list", length = 2)
-entity_index_input <- index_entities
-  for (i in seq_along(index_entities)){
-    
-    # Define Index Vector
-    index = entity_index_input[[i]]
-    print(index)
-    
-    # Skip Process if Index Vector is Empty
-    if (vector_is_empty(index)){
-      entity_index_output[[i]] <- index
-      next
-    }
-    
-    # Calculate Summary Statistics
-    summary <- as.vector(summary(index))
-    print(summary)
-    
-    # Define Outlier Parameters
-    iqr.range <- summary[5] - summary[2]
-    upper <- summary[5] + iqr.range * 1.5
-    lower <- summary[2] - iqr.range * 1.5
-    print(1.5 * iqr.range)
-    print(upper)
-    print(lower)
-    # Drop if Index is Outlier
-    index <- index[index > lower]
-    index <- index[index < upper]
-    
-    entity_index_output[[i]] <- index
-  }
-```
-
-
 ## Convert Index to Strings
 With out entity nodes processed, we can now convert index lists to text strings.
 The following function inputs the original hypothesis text, and outputs the extracted entities.
 ```{r}
-index_entities[[1]]
-index_entities[[2]]
+paste0("Entity 1 - Index: ", index_entities[[1]])
+paste0("Entity 2 - Index: ", index_entities[[2]])
 str_entites <- index_to_entity(hypothesis, index_entities)
 str_entites
 
@@ -302,7 +200,7 @@ paste0("Entity 2 - Text: ", str_entites[2])
 The following code block executes the complete Entity Extraction process for a individual hypothesis.
 
 ```{r}
-wrapper_test_indv <- entity_extraction_indv(hypothesis)
+wrapper_test_indv <- wrapper_entity_extraction_indv(hypothesis)
 wrapper_test_indv
 ```
 
