--- a/notebooks/testing_causality_classification.Rmd
+++ b/notebooks/testing_causality_classification.Rmd
@@ -20,9 +20,11 @@ The purpose of this notebook is to test how to implement the Entity Extraction m
   if (!require(pacman)) {install.packages('pacman')}
   p_load(
     dplyr,
-    purrr,
+    # purrr,
+    quanteda,
     stringr,
-    tidyr
+    tidyr,
+    tidytext
   )
 ```
 
@@ -48,8 +50,17 @@ pdf_path <- "./../data/acadmic_papers_pdf_sample/jv04amj.pdf"
 ```
 
 ## Python Modules
+```{r}
+np <- import("numpy")
+joblib <- import("joblib")
+nltk_stem <- import("nltk.stem")
+```
 
-
+## Causality Classification Model
+```{r}
+path_model <- "./../models/causality_bow_pipeline_naive_bayes.pkl"
+model_causality <- joblib$load(path_model)
+```
 # Pre-process Steps
 Before Causality Classification occurs, the following steps happen:
 
@@ -57,158 +68,120 @@ Before Causality Classification occurs, the following steps happen:
 * Hypothesis Classification
 * Entity Extraction
 
-
 ```{r}
 # Text Pre-processing
-text_raw <- pdf_to_text(pdf_path)
-text_processed <- process_text(input_text = text_raw)
+text_processed <- process_text(pdf_path)
 
 # Hypothesis Classification
 hypothesis <- extract_hypothesis(text_processed)
-hypothesis_vec <- hypothesis %>% pull(hypothesis)
-hypothesis
+
+
+hypothesis_causality <- hypothesis %>% select(hypothesis_causality)
+hypothesis_entity <- hypothesis %>% pull(hypothesis)
 
 # Entity Extraction
-entities <- entity_extraction_mult(hypothesis_vec)
+entities <- entity_extraction_mult(hypothesis_entity)
+
 entities
+hypothesis_causality
 ```
 
-# Replace Entity With Node
-```{r}
+# Processing
 
+* remove punctuation
+* replace node_1 / node_2
+
+```{r}
 pattern_punct <- "[[:punct:]]"
 
-causality <- hypothesis %>% 
+causality_01 <- hypothesis_causality %>% 
   bind_cols(entities) %>% 
   mutate(
     row_id= row_number()
   ) %>% 
   select(row_id, everything()) %>% 
-  drop_na()%>% 
-  modify_if(is.factor, as.character) %>% 
+  drop_na()  %>% 
+  # modify_if(is.factor, as.character) %>% 
   mutate(
-    hypothesis = str_remove_all(hypothesis, pattern_punct),
+    hypothesis_causality = str_remove_all(hypothesis_causality, pattern_punct),
     cause = str_remove_all(cause, pattern_punct),
     effect = str_remove_all(effect, pattern_punct)
   ) %>% 
   mutate(
-    causal_statement = str_replace(hypothesis, cause, "node_1"),
-    causal_statement = str_replace(causal_statement, effect, "node_2")
+    causal_statement = str_replace(hypothesis_causality, cause, "node1"),
+    causal_statement = str_replace(causal_statement, effect, "node2")
   )
+
+causality_01
+```
+* Remove Stopwords
+```{r}
+
+causality_02 <- causality_01 %>% 
+  unnest_tokens(word, causal_statement) %>% 
+  anti_join(get_stopwords(), by = "word") %>% 
+  select(row_id, word)
+
+causality_02
+```
+* Lemmanize
+
+```{r}
+lemmatizer <- nltk_stem$WordNetLemmatizer()
+
+causality_02
+
+tokens <- causality_02 %>% pull(word)
+ 
+tokens_lemm = vector(mode = "character", length = length(tokens))
+for (i in seq_along(tokens)) {
+  token = tokens[i]
+  token_lemm <- lemmatizer$lemmatize(token)
+  tokens_lemm[i] = token_lemm
+}
+
+
+
+causality_03 <- causality_02 %>% 
+  bind_cols(tokens_lemm) %>% 
+  rename(word_lemm = "...3") %>% 
+  group_by(row_id) %>% 
+  mutate(sentence = str_c(word_lemm, collapse = " ")) %>%
+  select(-word, -word_lemm) %>% 
+  distinct() %>% 
+  pull(sentence)
+
+causality_03
+```
+
+# Model
+## Dummy Data
+```{r}
+input <- c()
+a <- "hypo node1 has a positive relationship on node2"
+b <- "node1 behaves positively to node2"
+c <- "node1 relationship on node2"
+d <- "hypo node1 node2"
+e <- "hypo 1 node1 likely use node2"
+f <- "hypo 1 predicted increased use node1 would result increased node2 decreasedvoluntaryemployeeturnover"
+g <- "hypo 3 positive effect node1 node2"
+h <- "hypo 3 positive effect node1 node2"
+input <- c(input, a, b, c, d, e, f, g, h)
+
+model_causality$predict_proba(input)
+```
+
+## Actual Data
+```{r}
+causality_pred <- model_causality$predict(causality_03)
+
+causality <- data.frame(causality_pred) %>% rename(causality = causality_pred)
 
 causality
 ```
 
-
-## Process Text and Extract Hypotheses
-First, we process our raw input and extract hypotheses.
-```{r process_extract_hypothesis}
-# Process Text
-text_processed <- process_text(input_text = pdf_txt_raw)
-
-# Extract Hypothesis
-hypo_xtr_vec <- extract_hypothesis(text_processed) %>% 
-  select(hypothesis) %>% 
-  pull()
-```
-
-# Hypothesis Selection
-For the following process, one hypothesis will be selected as a indicative sample. We will use this hypothesis to work through the process of turning a hypothesis into two extracted entities. Once the process is solidified, we can apply it across all available hypothesis.
-```{r select_exmample_hypothesis}
-n = 1
-hypothesis <- hypo_xtr_vec[n]
-hypothesis
-```
-
-## Generate Predictions
-We now generate predicted Entity class for the hypothesis. The model return a 1D array for each input hypothesis, so we must convert the 1D array to a vector.
-
-```{r generate_classes}
-pred_classes <- gen_entity_class(hypothesis)
-
-pred_classes
-```
-
-# Extract Entities
-With our example hypothesis selected, our first step is to generate a list of indexes fo where Node 1 and Node 2 were predicted.
+# Function Test
 ```{r}
-index_entities <- gen_entity_class_index(pred_classes)
+causality_output <- causality_classification(hypothesis)
 ```
-With the indexes of each Node identified, some processing has to occur. Generally, the Node 1 and Node 2 indexes are grouped with the sample class, and distinct from each other. A sample seletion of the Entity Extraction model output might look like the following:
-
-* 0, 0, 1, 1, 1, 0, 0, 2, 2, 2, 2, 0, 0, 0 
-
-From the above model output, we can clearly see where the Node 1 and Node 2 entities are, and we can go forward and extract from from the hypothesis text. 
-
-Unfortunately the model output is not always so clear. The following are possible issues that need to be addressed:
-
-* Node 1 and Node 2 indexes overlap
- * 0, 0, 1, 1, 2, 1, 0, 0, 2, 2, 2, 0, 0, 0 
- 
-* Node 1 or Node 2 contain a predicted index that is far from the majority of the cases(outliers)
- * 0, 0, 1, 1, 1, 0, 0, 2, 2, 2, 2, 0, 0, 0, 0, 0, 0, 0, 0, 2
- 
-In order to extract distinct entities, we need to process any predictions experiencing the above issues.
-
-## Overlap
-For overlapping entities we define a function. When there is overlap, the function trims one of the overlapping indexes. This process repeats until there is no overlap. The Node which get's trimmed is the Node with the longest span. In the case of equal length nodes, Node 2 is trimmed.
-
-With the function defined, we can execute on the sample hypothesis.
-```{r}
-print("Nodes Indexes - Pre")
-print(index_entities)
-
-# Verify Both Entities Detected
-both_entity_present <- vector_is_empty(index_entities[[1]]) & 
-  vector_is_empty(index_entities[[2]])
-
-# Trim Overlap
-if (both_entity_present) {
-  index_entities <- trim_overlapping_entities(index_entities)
-}
-
-
-print("Nodes Indexes - Post")
-print(index_entities)
-```
-
-## Outliers
-For outlier predicted classes, we use the standard Box Plot outlier definition, *1.5 x Interquartile Range*. We define a function which identifies outlier indexes and the trims them.
-
-```{r}
-print("Nodes Indexes - Pre")
-print(index_entities)
-index_entities <- trim_outlier_indexes(index_entities)
-print("Nodes Indexes - Post")
-print(index_entities)
-```
-## Convert Index to Strings
-With out entity nodes processed, we can now convert index lists to text strings.
-The following function inputs the original hypothesis text, and outputs the extracted entities.
-```{r}
-paste0("Entity 1 - Index: ", index_entities[[1]])
-paste0("Entity 2 - Index: ", index_entities[[2]])
-str_entites <- index_to_entity(hypothesis, index_entities)
-str_entites
-
-paste0("Entity 1 - Text: ", str_entites[1])
-paste0("Entity 2 - Text: ", str_entites[2])
-```
-
-# Wrapper Functions
-## Individual Hypothesis
-The following code block executes the complete Entity Extraction process for a individual hypothesis.
-
-```{r}
-wrapper_test_indv <- wrapper_entity_extraction_indv(hypothesis)
-wrapper_test_indv
-```
-
-## Multiple Hypotheses
-The followings tests the Entity Extraction process on a list of extracted hypotheses.
-```{r}
-wrapper_test_mult <- wrapper_entity_extraction_mult(hypo_xtr_vec)
-wrapper_test_mult
-```
-
 
