--- a/notebooks/verify_entity_extraction.Rmd
+++ b/notebooks/verify_entity_extraction.Rmd
@@ -18,6 +18,7 @@ The purpose of this notebook is to evaluate the Entity Extraction model, which w
 ```{r import_libraries}
   if (!require(pacman)) {install.packages('pacman')}
   p_load(
+    caret,
     dplyr,
     readxl,
     reticulate,
@@ -113,7 +114,7 @@ We need to select the target test set as well. Currently we have all target valu
 y_test_lst <- as.list(as.data.frame(t(targets_test)))
 ```
 
-For final evaluations we need to convert both test and predictions set from a list of vectors to a individual vectors, each observation appended to each other..
+For final evaluations we need to convert both test and predictions set from a list of vectors to a individual vectors, each observation appended to each other.
 ```{r list_to_vector}
 
 # List to Vector Function
