--- a/notebooks/testing_compiled.Rmd
+++ b/notebooks/testing_compiled.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Entity Extraction Performance Evaluation - R & Python"
+title: "Complete Process Performance Walkthrough"
 author: "Evan Canfield"
 date: "12/30/2020"
 output:
@@ -42,18 +42,6 @@ for (file in file_paths){
 }
 ```
 
-## Data
-```{r import_data}
-# PDF Input
-## Define Path
-pdf_path_a <- "./../data/acadmic_papers_pdf_sample/jv04amj.pdf"
-pdf_path_b <- "./../data/acadmic_papers_pdf_sample/wq11amj.pdf"
-pdf_path_c <- "test_name.pdf"
-pdf_paths <- c(pdf_path_a, pdf_path_b)
-
-pdf_path <- pdf_paths[2]
-```
-
 ## Python Modules
 ```{r}
 np <- import("numpy")
@@ -61,11 +49,16 @@ joblib <- import("joblib")
 nltk_stem <- import("nltk.stem")
 ```
 
-# PDF Name
-```{r}
-last(str_split(pdf_path_a, pattern = "/")[[1]])
-```
 
+## Data
+```{r import_data}
+folder_path <- "./../data/acadmic_papers_pdf_sample/"
+pdf_paths <- list.files(recursive = FALSE, 
+                       path = folder_path, 
+                       pattern = ".pdf", 
+                       full.names = TRUE)
+print(pdf_paths)
+```
 # Steps
 
 * Text Pre-processing
@@ -74,56 +67,123 @@ last(str_split(pdf_path_a, pattern = "/")[[1]])
 * Causality Classification
 * Final Output Table
 
-```{r warning=FALSE}
 
+## Step By Step
+```{r step_by_step, eval=FALSE}
+m <- 1
+n <- 10
+input_paths <- pdf_paths[m:n]
+
+i <- 1
 lst_output <- vector(mode = "list", length = length(pdf_paths))
-for (i in seq_along(pdf_paths)) {
-  pdf <- pdf_paths[i]
 
-  # Generate Final Table Components
-  ## File Name
+for (pdf in input_paths){
+
   file_name <- last(str_split(pdf, pattern = "/")[[1]])
-  print(file_name)
+  print(paste0("File Name: ", file_name))
   
-  ## Text Pre-processing
-  text_processed <- process_text(pdf)
   
-  ## Hypothesis Classification
-  hypothesis <- hypothesis_extraction(text_processed)
+  # Error Catching for PDF Conversion
+  possible_error <- tryCatch({
+      
+      text_processed <- process_text(pdf)
+      
+    },
+      
+      error = function(e) { 
+        e
+        error_statement <- paste0("Error. File ", 
+                                  file_name, 
+                                  " could not be converted into text.")
+        print(error_statement)
+        
+        }
+      )
   
-  ## Entity Extraction
-  entities <- entity_extraction(hypothesis)
+  ### Skip processing if error observed.
+  if(inherits(possible_error, "error")) next 
+
+  ## Extract Hypothesis
+  hypothesis <- hypothesis_extraction(text_processed, fasttext_tag = FALSE)
   
-  ## Causality Classification
-  causality_class <- causality_classification(hypothesis)
-  causality_class <- data.frame(causality_class)
+  ### Test if Empty
+  empty_hypothesis_test <- hypothesis %>% pull(hypothesis)
+  hypothesis_empty <- is_empty(empty_hypothesis_test)
   
-  # Compile Table
-  iter_df <- cbind(hypothesis, entities) %>% drop_na()
-  iter_df <- cbind(iter_df, causality_class)
-  iter_df$file_name <- file_name
-  
-  # Modify Headers and Format
-  iter_df <- iter_df %>% 
-    rename(
-      hypothesis_num = h_id,
-      causal_relationship = causality_pred
-      ) %>% 
-    select(
-      file_name, hypothesis_num, hypothesis, cause, 
-      effect, causal_relationship
-      ) %>% 
-    modify_if(is.factor, as.character)
-  
-  # Store in List
-  lst_output[[i]] <- iter_df
+
+  if (!(hypothesis_empty)) {
+    
+    ## Entity Extraction
+    entities <- entity_extraction(hypothesis)
+    
+    ### Test if Empty
+    empty_entity_test <- entities %>% drop_na() %>% pull(cause)
+    entity_empty <- is_empty(empty_entity_test)
+    print(paste0("Entity Empty Test: ", entity_empty))
+
+    
+    if (!(entity_empty)) {
+      
+      ## Causality Classification
+      causality_class <- causality_classification(hypothesis)
+      causality_class <- data.frame(causality_class)
+      
+      # Compile Table
+      iter_df <- cbind(hypothesis, entities) %>% drop_na()
+      iter_df <- cbind(iter_df, causality_class)
+      iter_df$file_name <- file_name
+      
+      # Modify Headers and Format
+      iter_df <- iter_df %>% 
+        rename(
+          hypothesis_num = h_id,
+          causal_relationship = causality_pred
+        ) %>% 
+        select(
+          file_name, hypothesis_num, hypothesis, cause, 
+          effect, causal_relationship
+        ) %>% 
+        modify_if(is.factor, as.character)
+      
+        lst_output[[i]] <- iter_df
+        i <- i + 1
+    } else {
+      
+      print(paste0("Entity Not Detected: ", file_name)
+            
+    } 
+  } else { 
+    
+    print(paste0("Hypothesis Not Extracted: ", file_name)
+          
+  }
 }
 
-output_df <- bind_rows(lst_output)
-output_df
+lst_output <- lst_output[lengths(lst_output) != 0]
 ```
 
-```{r}
+# Test Function
+## Single PDF
+```{r function_file_single, eval  = FALSE}
+m <- 1
+n <- 3
+input_paths <- pdf_paths[n]
 
+gen_output_table(file_path = input_paths)
+```
+
+# List of Multiple PDFs
+```{r function_file_multiple, eval  = FALSE}
+m <- 1
+n <- 3
+input_paths <- pdf_paths[m:n]
+gen_output_table(file_path = input_paths)
+```
+
+# Folder
+```{r function_folder}
+folder_path <- "./../data/acadmic_papers_pdf/"
+
+gen_output_table(folder_path = folder_path)
 ```
 
